@@ -62,6 +62,14 @@
 <a NAME="News"></a><b>News</b>: 
 <ul>
  <li>
+ <strong>GUADEC 2003 to attract global audience of GNOME developers and enthusiasts</strong>
+ <small>(18/02/2002)</small>
+ <blockquote>
+	 Free software luminaries, open source developers gather to advance the next
+	 generation of the multi-platform desktop environment in June, Dublin Ireland.
+ </blockquote>
+ </li>
+ <li>
  <strong>GNOME Foundation and Bitstream Inc. announce long-term agreement to bring high
 quality fonts to Free Software</strong>
  <small>(12/21/2002)</small>
