@@ -1,5 +1,9 @@
 2003-02-18  Glynn Foster <glynn.foster@sun.com>
 
+	* index.html: Need this one too :)
+
+2003-02-18  Glynn Foster <glynn.foster@sun.com>
+
 	* press/pr-guadec.html
 	* press.html
 
